Split server/client specific game utils
Split into their respective libraries, this is to avoid linker errors regarding undefined symbols.

--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -69,6 +69,8 @@ add_sources( SOURCE_GROUP "Server"
     "server/player.cpp"
     "server/player.h"
     "server/playerlocaldata.h"
+    "server/util_server.cpp"
+    "server/util_server.h"
     "server/vscript_server.cpp"
     "server/vscript_server.h"
 )
@@ -95,6 +97,8 @@ add_sources( SOURCE_GROUP "Client"
     "client/movehelper_client.cpp"
     "client/movehelper_client.h"
     "client/spritemodel.cpp"
+    "client/util_client.cpp"
+    "client/util_client.h"
     "client/viewrender.cpp"
     "client/viewrender.h"
     "client/vscript_client.cpp"
