--- a/r5dev/engine/CMakeLists.txt
+++ b/r5dev/engine/CMakeLists.txt
@@ -20,14 +20,12 @@ add_sources( SOURCE_GROUP "Collision"
     "traceinit.h"
 )
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
+if( NOT ${PROJECT_NAME} STREQUAL "engine_ds" )
 add_sources( SOURCE_GROUP "Debug"
     "debugoverlay.cpp"
     "debugoverlay.h"
 )
-endif()
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
 add_sources( SOURCE_GROUP "Render"
     "gl_matsysiface.h"
     "gl_model_private.h"
@@ -89,7 +87,7 @@ add_sources( SOURCE_GROUP "System"
     "sdk_dll.h"
 )
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
+if( NOT ${PROJECT_NAME} STREQUAL "engine_ds" )
 add_sources( SOURCE_GROUP "System"
     "sys_getmodes.cpp"
     "sys_getmodes.h"
@@ -98,6 +96,7 @@ add_sources( SOURCE_GROUP "System"
 )
 endif()
 
+if( NOT ${PROJECT_NAME} STREQUAL "engine_cl" )
 add_sources( SOURCE_GROUP "Server"
     "server/persistence.cpp"
     "server/persistence.h"
@@ -112,6 +111,7 @@ add_sources( SOURCE_GROUP "Server"
     "server/datablock_sender.cpp"
     "server/datablock_sender.h"
 )
+endif()
 
 add_sources( SOURCE_GROUP "Client"
     "client/cdll_engine_int.cpp"
@@ -129,7 +129,7 @@ add_sources( SOURCE_GROUP "Shared"
     "shared/shared_rcon.h"
 )
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
+if( NOT ${PROJECT_NAME} STREQUAL "engine_ds" )
 add_sources( SOURCE_GROUP "Client" # Client only.
     "client/clientstate.cpp"
     "client/clientstate.h"
@@ -144,9 +144,7 @@ add_sources( SOURCE_GROUP "Client" # Client only.
     "client/datablock_receiver.cpp"
     "client/datablock_receiver.h"
 )
-endif()
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
 add_sources( SOURCE_GROUP "GameUI"
     "${ENGINE_SOURCE_DIR}/gameui/IBrowser.cpp"
     "${ENGINE_SOURCE_DIR}/gameui/IBrowser.h"
@@ -218,7 +216,7 @@ add_sources( SOURCE_GROUP "Public"
     "${ENGINE_SOURCE_DIR}/public/gamebspfile.h"
 )
 
-if( ${PROJECT_NAME} STREQUAL "engine" )
+if( NOT ${PROJECT_NAME} STREQUAL "engine_ds" )
 add_sources( SOURCE_GROUP "Public"
     "${ENGINE_SOURCE_DIR}/public/client_class.h"
     "${ENGINE_SOURCE_DIR}/public/ivrenderview.h"
@@ -232,8 +230,14 @@ if( ${PROJECT_NAME} STREQUAL "engine_ds" )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "DEDICATED"
 )
+elseif( ${PROJECT_NAME} STREQUAL "engine_cl" )
+target_compile_definitions( ${PROJECT_NAME} PRIVATE
+    "CLIENT_DLL"
+)
 endif()
+
 endmacro()
 
 add_engine_project( "engine" )
 add_engine_project( "engine_ds" )
+add_engine_project( "engine_cl" )
