Add basic dashboard panel
Basic dashboard for the average user, along with an install/repair button that is yet to be implemented.

--- a/r5dev/sdklauncher/CMakeLists.txt
+++ b/r5dev/sdklauncher/CMakeLists.txt
@@ -10,8 +10,10 @@ add_sources( SOURCE_GROUP "Core"
 )
 
 add_sources( SOURCE_GROUP "GUI"
-    "basepanel.cpp"
-    "basepanel.h"
+    "advanced_surface.cpp"
+    "advanced_surface.h"
+    "base_surface.cpp"
+    "base_surface.h"
 )
 
 add_sources( SOURCE_GROUP "Resource"
