Restructure concommandbase classes
Move all classes deriving from ConCommandBase to a single file, and split out CCommand, CCvar, CCvarUtilities etc to their own files. This makes it possible to use CCommand and stuff in external tools without linker errors/warnings.

--- a/r5dev/vstdlib/CMakeLists.txt
+++ b/r5dev/vstdlib/CMakeLists.txt
@@ -6,6 +6,7 @@ start_sources()
 add_sources( SOURCE_GROUP "Private"
     "autocompletefilelist.cpp"
     "autocompletefilelist.h"
+    "concommandhash.cpp"
     "concommandhash.h"
     "keyvaluessystem.cpp"
     "keyvaluessystem.h"
