Interface factory system rewrite
Removed all extraneous copies by adding the class 'InterfaceReg' which will construct a new interface, and link it to the engine's static register. The Source Engine macro 'EXPOSE_INTERFACE_FN' will help utilizing this. The game module from the plugin is not obtained through the process environment block, so the executable is no longer sensitive to names.

--- a/r5dev/tier1/CMakeLists.txt
+++ b/r5dev/tier1/CMakeLists.txt
@@ -24,6 +24,7 @@ add_sources( SOURCE_GROUP "Private"
     "cmd.cpp"
     "convar.cpp"
     "cvar.cpp"
+    "interface.cpp"
 )
 
 file( GLOB TIER1_PUBLIC_HEADERS
