--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -55,9 +55,13 @@ add_sources( SOURCE_GROUP "Server"
     "server/basecombatcharacter.h"
     "server/baseentity.cpp"
     "server/baseentity.h"
+    "server/cbase.cpp"
+    "server/cbase.h"
     "server/detour_impl.h"
     "server/entitylist.cpp"
     "server/entitylist.h"
+    "server/entityoutput.cpp"
+    "server/entityoutput.h"
     "server/gameinterface.cpp"
     "server/gameinterface.h"
     "server/movehelper_server.cpp"
@@ -71,6 +75,8 @@ add_sources( SOURCE_GROUP "Server"
     "server/playerlocaldata.h"
     "server/util_server.cpp"
     "server/util_server.h"
+    "server/variant_t.cpp"
+    "server/variant_t.h"
     "server/vscript_server.cpp"
     "server/vscript_server.h"
 )
