Implement high precision frame limiter
Limits frames at a much higher level of precision than 'fps_max' and 'fps_max_gfx', probably ideal to reduce input latency even more. Also changed the logic of the NVIDIA Reflex frame limiter, to which it would use the desktop's refresh rate if set to '-1'. The new render thread frame limiter has a similar behavior. Using desktop refresh rates on the render thread or NVIDIA Reflex frame limiter requires 'fps_max' to be set to 0 (unlimited), as it would otherwise result in a major performance drop due to a contest if fps_max_(gfx/rt) is set to a similar number as fps_max.

--- a/r5dev/engine/CMakeLists.txt
+++ b/r5dev/engine/CMakeLists.txt
@@ -27,6 +27,8 @@ add_sources( SOURCE_GROUP "Debug"
 )
 
 add_sources( SOURCE_GROUP "Render"
+    "framelimit.cpp"
+    "framelimit.h"
     "gl_matsysiface.h"
     "gl_model_private.h"
     "gl_rmain.cpp"
