Move NVIDIA Reflex implementation to library function
Improve code, there will be more NVIDIA GeForce related stuff soon.

--- a/r5dev/CMakeLists.txt
+++ b/r5dev/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory( vstdlib )
 add_subdirectory( vphysics )
 add_subdirectory( ebisusdk )
 add_subdirectory( codecs )
+add_subdirectory( geforce )
 
 set( FOLDER_CONTEXT "Protocols" )
 add_subdirectory( protoc )
