WIP: add JWT library
Currently does not compile, pending integration into SDK.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory( thirdparty/curl )
 add_subdirectory( thirdparty/sdl )
 add_subdirectory( thirdparty/imgui )
 add_subdirectory( thirdparty/spdlog )
+add_subdirectory( thirdparty/jwt )
 add_subdirectory( thirdparty/lzham )
 add_subdirectory( thirdparty/fastlz )
 
