EULA dialog implementation
Display the EULA (fetched from masterserver), which the end user MUST accept before they can make use of the multiplayer features of R5Reloaded. NOTE: user doesn't need to agree to this to use the listenserver.

--- a/src/vgui/CMakeLists.txt
+++ b/src/vgui/CMakeLists.txt
@@ -16,4 +16,9 @@ add_sources( SOURCE_GROUP "Debug"
     "vgui_fpspanel.h"
 )
 
+add_sources( SOURCE_GROUP "vgui_controls"
+    "vgui_controls/RichText.cpp"
+    "vgui_controls/RichText.h"
+)
+
 end_sources()
