--- a/r5dev/resource/cfg/system/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/system/autoexec_server_dev.cfg
@@ -24,6 +24,7 @@ sv_visualizetraces           "1"      // Show native and script related debug tr
 //////////////////////////
 //// CAI              ////
 //////////////////////////
+sv_spawnAIHintsInMP          "1"      // Must be set to cache the entire AI Network graph.
 ai_ainRebuildOnMapStart      "0"      // Whether to rebuild the AI Network graph on level load.
 ai_ainDumpOnLoad             "0"      // Whether to dump the parsed AI Network graph file loaded from disk.
 ai_ainDebugConnect           "1"      // Show AI Network graph connection debug.
