Add comprehensive error logging for downloads and fix CPU in progress callback
The game will now not be installed if the download fails (this should've never happened in the first place). The CPU usage fix should also fix download speed throttling.

--- a/r5dev/netconsole/CMakeLists.txt
+++ b/r5dev/netconsole/CMakeLists.txt
@@ -6,13 +6,13 @@ start_sources()
 add_sources( SOURCE_GROUP "Core"
     "netconsole.cpp"
     "netconsole.h"
-    "plat_time.cpp"
     "${ENGINE_SOURCE_DIR}/core/logdef.cpp"
     "${ENGINE_SOURCE_DIR}/core/logdef.h"
     "${ENGINE_SOURCE_DIR}/core/logger.cpp"
     "${ENGINE_SOURCE_DIR}/core/logger.h"
     "${ENGINE_SOURCE_DIR}/core/termutil.cpp"
     "${ENGINE_SOURCE_DIR}/core/termutil.h"
+    "${ENGINE_SOURCE_DIR}/tier0/plat_time.cpp"
 )
 
 add_sources( SOURCE_GROUP "Engine"
