--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -29,6 +29,8 @@ add_sources( SOURCE_GROUP "Debug"
 add_sources( SOURCE_GROUP "Render"
     "framelimit.cpp"
     "framelimit.h"
+    "gl_drawlights.cpp"
+    "gl_drawlights.h"
     "gl_matsysiface.h"
     "gl_model_private.h"
     "gl_rmain.cpp"
