InputSystem: largely reversed struct and fully reversed iface
Struct has been largely mapped out (still requires a bit of work, mostly the Xbox/Hid data structures). The vftable has been fully mapped out.

--- a/src/inputsystem/CMakeLists.txt
+++ b/src/inputsystem/CMakeLists.txt
@@ -9,7 +9,10 @@ add_sources( SOURCE_GROUP "Private"
 )
 
 add_sources( SOURCE_GROUP "Public"
+    "${ENGINE_SOURCE_DIR}/public/inputsystem/iinputsystem.h"
+    "${ENGINE_SOURCE_DIR}/public/inputsystem/AnalogCode.h"
     "${ENGINE_SOURCE_DIR}/public/inputsystem/ButtonCode.h"
+    "${ENGINE_SOURCE_DIR}/public/inputsystem/InputEnums.h"
 )
 
 end_sources()
