CMake: add ReVPK project, standalone VPK tool
Standalone VPK tool that does everything the VPK tool implemented in the dedicated server does (pack, unpack), but independent from the game's runtime.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,6 +49,7 @@ set( FOLDER_CONTEXT "Tools" )
 add_subdirectory( sdklauncher )
 add_subdirectory( netconsole )
 add_subdirectory( naveditor )
+add_subdirectory( revpk )
 
 set( FOLDER_CONTEXT "System" )
 add_subdirectory( networksystem )
