RTech: initial custom pak compression implementation
Allows paks compressed with ZSTD, to be stream decoded at run time. Currently seems to work pretty good, but needs to be further battle tested + cleaned up still.

--- a/r5dev/CMakeLists.txt
+++ b/r5dev/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory( thirdparty/spdlog )
 add_subdirectory( thirdparty/jwt )
 add_subdirectory( thirdparty/lzham )
 add_subdirectory( thirdparty/fastlz )
+add_subdirectory( thirdparty/zstd )
 
 set( FOLDER_CONTEXT "Thirdparty/ARM" )
 add_subdirectory( thirdparty/mbedtls )
