RTech: add simple pak encoder command
Encodes a pak file with ZSTD.

--- a/r5dev/rtech/CMakeLists.txt
+++ b/r5dev/rtech/CMakeLists.txt
@@ -15,6 +15,9 @@ add_sources( SOURCE_GROUP "Pak"
    "pak/pakalloc.cpp"
    "pak/pakalloc.h"
 
+   "pak/pakencode.cpp"
+   "pak/pakencode.h"
+
    "pak/pakdecode.cpp"
    "pak/pakdecode.h"
 
