--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,27 +24,28 @@ set( FOLDER_CONTEXT "Respawn" )
 add_subdirectory( rtech )
 
 set( FOLDER_CONTEXT "Thirdparty" )
-add_subdirectory( thirdparty/cppnet )
-add_subdirectory( thirdparty/curl )
-add_subdirectory( thirdparty/sdl )
-add_subdirectory( thirdparty/imgui )
 add_subdirectory( thirdparty/spdlog )
-add_subdirectory( thirdparty/jwt )
+add_subdirectory( thirdparty/recast )
+add_subdirectory( thirdparty/detours )
+
+set( FOLDER_CONTEXT "Thirdparty/Compression" )
 add_subdirectory( thirdparty/lzham )
 add_subdirectory( thirdparty/fastlz )
 add_subdirectory( thirdparty/zstd )
+add_subdirectory( thirdparty/lz4 )
 
-set( FOLDER_CONTEXT "Thirdparty/ARM" )
+set( FOLDER_CONTEXT "Thirdparty/Security" )
 add_subdirectory( thirdparty/mbedtls )
+add_subdirectory( thirdparty/jwt )
 
-set( FOLDER_CONTEXT "Thirdparty/Google" )
+set( FOLDER_CONTEXT "Thirdparty/Multimedia" )
+add_subdirectory( thirdparty/sdl )
+add_subdirectory( thirdparty/imgui )
+add_subdirectory( thirdparty/cppnet )
+
+set( FOLDER_CONTEXT "Thirdparty/Networking" )
 add_subdirectory( thirdparty/protobuf )
-
-set( FOLDER_CONTEXT "Thirdparty/Microsoft" )
-add_subdirectory( thirdparty/detours )
-
-set( FOLDER_CONTEXT "Thirdparty/Recast" )
-add_subdirectory( thirdparty/recast )
+add_subdirectory( thirdparty/curl )
 
 set( FOLDER_CONTEXT "Tools" )
 add_subdirectory( sdklauncher )
