Engine: partial rebuild for data block sender/receiver
This patch partially rebuilds the data block sender/receiver. The receiver leaks memory if the sender sends a bogus LZ4 packet, it would allocate memory to copy the encoded data into, from which it would decode it to the scratch buffer, but it would never deallocate this temporary buffer is the LZ4 decoder failed. This has been fixed. The second reason to rebuild these was to look into potential compression optimization. The data block rebuild now also features the latest LZ4 codec.

--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -64,9 +64,11 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
     "playlists"
     "stryder"
 
-    "libdetours"
     "liblzham"
     "libzstd"
+    "liblz4"
+
+    "libdetours"
     "libcurl"
     "libprotobuf"
     "libspdlog"
