Engine: cleanup data block sender/receiver and add types
* Move member vars to correct place, to match it with the engine.
* Added out-of-band network message ID's for the R5 engine.

Also implemented 'ServerDataBlockSender::SendDataBlock()' and 'ClientDataBlockReceiver::AcknowledgeTransmission()'. NOTE that these are currently not tested, and also not in use! The code uses the version stored in the vftable which is what the engine itself provides. These have been implemented for reference only. If they need to be used, they need to be thoroughly tested first!

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -136,6 +136,8 @@ add_sources( SOURCE_GROUP "Shared"
     "shared/base_rcon.h"
     "shared/shared_rcon.cpp"
     "shared/shared_rcon.h"
+    "shared/datablock.cpp"
+    "shared/datablock.h"
 )
 
 if( NOT ${PROJECT_NAME} STREQUAL "engine_ds" )
@@ -207,7 +209,6 @@ add_sources( SOURCE_GROUP "Public"
     "${ENGINE_SOURCE_DIR}/public/dt_send.h"
     "${ENGINE_SOURCE_DIR}/public/dt_recv.h"
     "${ENGINE_SOURCE_DIR}/public/datamap.h"
-    "${ENGINE_SOURCE_DIR}/public/idatablock.h"
     "${ENGINE_SOURCE_DIR}/public/idebugoverlay.h"
     "${ENGINE_SOURCE_DIR}/public/iengine.h"
     "${ENGINE_SOURCE_DIR}/public/iserver.h"
