Mathlib: enable SIMD quaternions
Should match output code with the code in the game executable, as that has been compiled with SIMD enabled.

--- a/r5dev/mathlib/CMakeLists.txt
+++ b/r5dev/mathlib/CMakeLists.txt
@@ -62,5 +62,6 @@ target_precompile_headers( ${PROJECT_NAME} PRIVATE
 )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "BUILDING_MATHLIB"
+    "ALLOW_SIMD_QUATERNION_MATH"
     $<$<OR:$<CONFIG:Debug>,$<CONFIG:Profile>>:DEBUG_MATHLIB>
 )
