--- a/src/mathlib/CMakeLists.txt
+++ b/src/mathlib/CMakeLists.txt
@@ -62,5 +62,6 @@ target_precompile_headers( ${PROJECT_NAME} PRIVATE
 )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "BUILDING_MATHLIB"
+    "ALLOW_SIMD_QUATERNION_MATH"
     $<$<OR:$<CONFIG:Debug>,$<CONFIG:Profile>>:DEBUG_MATHLIB>
 )
