--- a/src/vscript/CMakeLists.txt
+++ b/src/vscript/CMakeLists.txt
@@ -15,11 +15,14 @@ add_sources( SOURCE_GROUP "Squirrel_RE"
 
 add_sources( SOURCE_GROUP "Squirrel_RE/squirrel"
     "languages/squirrel_re/squirrel/sqapi.cpp"
+    "languages/squirrel_re/squirrel/sqdebug.cpp"
     #"languages/squirrel_re/squirrel/sqcompiler.cpp"
     "languages/squirrel_re/squirrel/sqfuncstate.cpp"
     #"languages/squirrel_re/squirrel/sqlexer.cpp"
     "languages/squirrel_re/squirrel/sqobject.cpp"
     "languages/squirrel_re/squirrel/sqstring.cpp"
+    "languages/squirrel_re/squirrel/sqtable.cpp"
+    "languages/squirrel_re/squirrel/sqmem.cpp"
     "languages/squirrel_re/squirrel/sqvm.cpp"
 )
 
@@ -33,11 +36,14 @@ add_sources( SOURCE_GROUP "Squirrel_RE/include"
     #"languages/squirrel_re/include/sqcompiler.h"
     "languages/squirrel_re/include/sqfuncstate.h"
     #"languages/squirrel_re/include/sqlexer.h"
+    "languages/squirrel_re/include/sqarray.h"
+    "languages/squirrel_re/include/squtils.h"
     "languages/squirrel_re/include/sqobject.h"
     "languages/squirrel_re/include/sqopcodes.h"
     "languages/squirrel_re/include/sqstate.h"
     "languages/squirrel_re/include/sqstdaux.h"
     "languages/squirrel_re/include/sqstring.h"
+    "languages/squirrel_re/include/sqtable.h"
     "languages/squirrel_re/include/squirrel.h"
     "languages/squirrel_re/include/sqvm.h"
 )
