--- a/r5dev/tier2/CMakeLists.txt
+++ b/r5dev/tier2/CMakeLists.txt
@@ -9,6 +9,7 @@ add_sources( SOURCE_GROUP "Utility"
     "meshutils.cpp"
     "renderutils.cpp"
     "socketcreator.cpp"
+    "websocket.cpp"
 )
 
 file( GLOB TIER2_PUBLIC_HEADERS
@@ -20,4 +21,12 @@ add_sources( SOURCE_GROUP "Public"
 
 end_sources()
 
-target_include_directories( ${PROJECT_NAME} PRIVATE "${ENGINE_SOURCE_DIR}/tier0/" "${ENGINE_SOURCE_DIR}/tier1/" )
+target_include_directories( ${PROJECT_NAME} PRIVATE 
+    "${ENGINE_SOURCE_DIR}/tier0/" 
+    "${ENGINE_SOURCE_DIR}/tier1/"
+)
+
+target_include_directories( ${PROJECT_NAME} PRIVATE 
+    "${THIRDPARTY_SOURCE_DIR}/dirtysdk/include/"
+    "${THIRDPARTY_SOURCE_DIR}/ea/"
+)
